Doctor reports are showing now

--- a/HMS/templates/doctorhome.html
+++ b/HMS/templates/doctorhome.html
@@ -35,7 +35,9 @@
             <div class="HDisease_Prediction">
                 <img src="../static/public/My_Dashboard_Frame.svg" alt="">
             </div>
-            <button id="my_patients" type="button">My Patients</button>
+            <a href="doctorreport" >
+                <button id="my_patients" type="button">My Reports</button>
+            </a>
         </div>
 
         <!-- Right Part -->
