--- a/HMS/templates/patientreport.html
+++ b/HMS/templates/patientreport.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>patienthome</title>
+    <title>PatientReport</title>
 </head>
 <body>
 
