Doctor And Patients Can download their reports now

--- a/HMS/templates/form_diab_result.html
+++ b/HMS/templates/form_diab_result.html
@@ -20,7 +20,7 @@
 
         <div class="background1"></div>
         <div class="header">
-            <a href="./homepage" class="logo">
+            <a href="homepage2" class="logo">
                 <img src="../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
