--- a/HMS/templates/form_heart.html
+++ b/HMS/templates/form_heart.html
@@ -32,7 +32,7 @@
             <!-- <img src="./public/Ellipse_13.svg"> -->
         </div>
         <div class="header">
-            <a href="./homepage" class="logo">
+            <a href="homepage2" class="logo">
                 <img src="../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
