--- a/HMS/templates/doctorreport.html
+++ b/HMS/templates/doctorreport.html
@@ -13,6 +13,9 @@
         <h4>Patient Name: {{report.patient.first_name}} {{report.patient.last_name}}</h4>
         <h4>Disease Name: {{report.disease}}</h4>
         <h4>Date: {{report.date}}</h4>
+        <a href="/report?report_id={{report.id}}">
+            <button></button>
+        </a>
     </div>
 {% endfor %}
 
