--- a/HMS/templates/patienthome.html
+++ b/HMS/templates/patienthome.html
@@ -11,6 +11,9 @@
         <h4>Doctor Name: {{report.doctor.first_name}} {{report.doctor.last_name}}</h4>
         <h4>Disease Name: {{report.disease}}</h4>
         <h4>Date: {{report.date}}</h4>
+        <a href="report?report_id={{report.id}}" target="_blank">
+            <button type="button">Download Report</button>
+        </a>
     </div>
 {% endfor %}
 
