Forgot Password Added

--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -48,6 +48,12 @@
                             </div>
                             <button class="button" type="submit">Login</button>
                         </form>
+
+<!--                        FORGOT PASSWORD-->
+                        <a href="reset_password">
+                            Forgot Password
+                        </a>
+
                     </div>
                 </div>
                 <div class="background2"></div>
