--- a/HMS/templates/psignup.html
+++ b/HMS/templates/psignup.html
@@ -77,10 +77,10 @@
                         <element id="apostrophe">*</element>
                     </div>
 
-                    <div class="weight" id="row">
-                        <element id="fields"> Weight in Kg</element>
-                        <element id="apostrophe">*</element>
-                    </div>
+<!--                    <div class="weight" id="row">-->
+<!--                        <element id="fields"> Weight in Kg</element>-->
+<!--                        <element id="apostrophe">*</element>-->
+<!--                    </div>-->
                     <div class="gender" id="row">
                         <element id="fields"> Gender</element>
                         <element id="apostrophe">*</element>
@@ -108,7 +108,7 @@
                     <input type="password" id="textbox" required name="pass2" placeholder="Confirm Password" maxlength="30">
 
                     <input type="number" id="textbox" required name="height" placeholder="Height in Centimeters" maxlength="4">
-                    <input type="number" id="textbox" required name="weight" placeholder="Weight in Kilogram" maxlength="4">
+<!--                    <input type="number" id="textbox" required name="weight" placeholder="Weight in Kilogram" maxlength="4">-->
 
                     <select name="gender" id="textbox" required>
                         <option value="" disabled selected>Select</option>
