--- a/HMS/templates/diabetesinfo.html
+++ b/HMS/templates/diabetesinfo.html
@@ -89,9 +89,9 @@
         <div class="med-ai">MED.AI</div>
       </div>
 
-      <a href="../../homepage.html" class="home">Home</a>
-      <a href="../../homepage.html#contact"><div class="contact-us">Contact us</div></a>
-      <a href="../../homepage.html#line1"><div class="about-us">About us</div></a>
+      <a href="./homepage" class="home">Home</a>
+      <a href="./homepage#contact"><div class="contact-us">Contact us</div></a>
+      <a href="./homepage#line1"><div class="about-us">About us</div></a>
       <div class="diabetes-ml-model">Diabetes ML Model</div>
       <div class="dataset-overview">Dataset Overview</div>
       <div
@@ -147,24 +147,13 @@
           Resting Electrocardiographic Results: Results of resting
           electrocardiogram (values 0, 1, 2).
         </div>
-        <div
+        <divx
           class="maximum-heart-rate-achieved-the-highest-heart-r-ate-achieved-during-testing"
         >
           Maximum Heart Rate Achieved: The highest heart r ate achieved during
           testing.
         </div>
-        <div
-          class="exercise-induced-angina-whether-the-patient-experienced-angina-due-to-exercise-1-for-yes-0-for-no"
-        >
-          Exercise-Induced Angina: Whether the patient experienced angina due to
-          exercise (1 for yes, 0 for no).
-        </div>
-        <div
-          class="number-of-major-vessels-indicates-the-number-of-major-vessels-colored-by-flouroscopy-0-3"
-        >
-          Number of Major Vessels: Indicates the number of major vessels colored
-          by flouroscopy (0-3).
-        </div>
+        
       </div>
       <img
         class="_25553239-79-z-2203-w-009-n-001-124-c-p-6-124-1"
@@ -443,9 +432,9 @@
           >
         </div>
       </div>
-      <img class="untitled-3" src="untitled-3.png" /><img
+      <img class="untitled-3" src="../static/css/diabetes/untitled-3.png" /><img
         class="_2206-i-105-037-s-m-005-c-13-1"
-        src="_2206-i-105-037-s-m-005-c-13-1.png"
+        src="../static/css/diabetes/_2206-i-105-037-s-m-005-c-13-1.png"
       />
       <div class="frame">
         <div class="group">
@@ -4465,10 +4454,10 @@
       </div>
       <img
         class="_5-e-0-c-09805-d-04718512864363-ab-3-f-0-d-78-1"
-        src="5e0c09805d04718512864363ab3f0d78.gif"
-      /><img class="big-data-1" src="big-data.gif" /><img
+        src="../static/css/diabetes/5e0c09805d04718512864363ab3f0d78.gif"
+      /><img class="big-data-1" src="../static/css/diabetes/big-data-1.png" /><img
         class="untitled-2"
-        src="untitled-2.png"
+        src="../static/css/diabetes/untitled-2.png"
       />
     </div>
   </body>
