query submission and result_diab&heart path changes

--- a/HMS/templates/disease/diabetes/result_diab.html
+++ b/HMS/templates/disease/diabetes/result_diab.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" >
-    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+    <link rel="stylesheet" href="../../../static/css/form_and_prediction.css">
 
     <!-- icon not working due to "{% load static %}" -->
-    <link rel="icon" href="../static/public/favicon.ico">
+    <link rel="icon" href="../../../static/public/favicon.ico">
 
     <title>Status</title>
 </head>
@@ -66,7 +66,7 @@
         </div>
         <div class="header">
             <a href="homepage2" class="logo">
-                <img src="../static/public/logo.svg" alt="">
+                <img src="../../../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
@@ -76,7 +76,7 @@
             <div class="Doctor_Name">
                 <!-- <input type="text" class="doctorNameInput" placeholder="Name Of Doctor" readonly> -->
                 <input class="doctorNameInput" type="text" name="DoctorName" id="" value="{{DoctorProfile.first_name}} {{DoctorProfile.last_name}}" readonly>
-                <img src="../static/public/user.svg" alt="User">
+                <img src="../../../static/public/user.svg" alt="User">
             </div>
         </div>
 
@@ -88,7 +88,7 @@
                 <div class="ellipse10">
                     <div class="ellipse11">
                         <div class="HDisease_Prediction"><img
-                            src="../static/public/DiabetesFrame.svg" alt=""></div>
+                            src="../../../static/public/DiabetesFrame.svg" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                     <div class="Prediction2">
                         <div class="Box1">
                             <div class="GIF1">
-                                <img src="../static/public/diabetesgif.gif"
+                                <img src="../../../static/public/diabetesgif.gif"
                                     alt="PredictionImage">
                             </div>
                             <div class="predict_result">
