--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -92,9 +92,10 @@
         <div class="enteremail">
             <div class="head">For any queries</div>
             <div class="form">
-                <form onsubmit="return validateForm()" action="" method="POST" name="form1">
+                <!-- <form onsubmit="return validateForm()" action="mailto:202101425@daiict.ac.in?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Queries%20regarding%20MED-AI" method="POST" name="form1"> -->
+                    <form onsubmit="return validateForm()" action="mailto:202101425@daiict.ac.in?&subject=Queries%20regarding%20MED-AI" method="POST" name="form1">
                     <input type="email" placeholder="Enter email" value="" name="email" maxlength="30" required>
-                    <input type="submit">
+                    <input type="submit" value="Submit">
                 </div>
             </div>
             <div class="typequery">
