--- a/HMS/templates/disease/heart/result_heart.html
+++ b/HMS/templates/disease/heart/result_heart.html
@@ -11,9 +11,9 @@
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"
         rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+    <link rel="stylesheet" href="../../../static/css/form_and_prediction.css">
     
-    <link rel="icon" href="../static/public/favicon.ico">
+    <link rel="icon" href="../../../static/public/favicon.ico">
     <title>Status</title>
 </head>
 <body>
@@ -61,7 +61,7 @@
         </div>
         <div class="header">
             <a href="homepage2" class="logo">
-                <img src="../static/public/logo.svg" alt="">
+                <img src="../../../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
@@ -72,7 +72,7 @@
                 <!-- <input type="text" class="doctorNameInput"
                     placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly> -->
                     <input class="doctorNameInput" type="text" name="DoctorName" id="" value="{{DoctorProfile.first_name}} {{DoctorProfile.last_name}}" readonly>
-                <img src="../static/public/user.svg" alt="User">
+                <img src="../../../static/public/user.svg" alt="User">
             </div>
         </div>
 
@@ -82,7 +82,7 @@
             <div class="LeftPart">
                 <div class="Heart_Disease">Heart Disease</div>
                 <div class="HDisease_Prediction">
-                    <img src="../static/public/HeartDiseaseForm.svg" alt="">
+                    <img src="../../../static/public/HeartDiseaseForm.svg" alt="">
                 </div>
             </div>
 
@@ -173,7 +173,7 @@
                     <div class="Prediction2">
                         <div class="Box1">
                             <div class="GIF2">
-                                <img src="../static/public/heartgif.gif" alt="PredictionImage" >
+                                <img src="../../../static/public/heartgif.gif" alt="PredictionImage" >
                             </div>
                             <div class="predict_result">
                                 <div class="resulttext">
