--- a/HMS/templates/disease/diabetes/diabetesinfo.html
+++ b/HMS/templates/disease/diabetes/diabetesinfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/diabetes/style.css"/>
+    <link rel="stylesheet" href="../../../static/css/diabetes/style.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <style>
@@ -432,9 +432,9 @@
           >
         </div>
       </div>
-      <img class="untitled-3" src="../static/css/diabetes/untitled-3.png" /><img
+      <img class="untitled-3" src="../../../static/css/diabetes/untitled-3.png" /><img
         class="_2206-i-105-037-s-m-005-c-13-1"
-        src="../static/css/diabetes/_2206-i-105-037-s-m-005-c-13-1.png"
+        src="../../../static/css/diabetes/_2206-i-105-037-s-m-005-c-13-1.png"
       />
       <div class="frame">
         <div class="group">
@@ -4454,10 +4454,10 @@
       </div>
       <img
         class="_5-e-0-c-09805-d-04718512864363-ab-3-f-0-d-78-1"
-        src="../static/css/diabetes/5e0c09805d04718512864363ab3f0d78.gif"
-      /><img class="big-data-1" src="../static/css/diabetes/big-data-1.png" /><img
+        src="../../../static/css/diabetes/5e0c09805d04718512864363ab3f0d78.gif"
+      /><img class="big-data-1" src="../../../static/css/diabetes/big-data-1.png" /><img
         class="untitled-2"
-        src="../static/css/diabetes/untitled-2.png"
+        src="../../../static/css/diabetes/untitled-2.png"
       />
     </div>
   </body>
