--- a/HMS/templates/disease/diabetes/form_diab.html
+++ b/HMS/templates/disease/diabetes/form_diab.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+    <link rel="icon" href="../../../static/public/favicon.ico">
+    <link rel="stylesheet" href="../../../static/css/form_and_prediction.css">
     <title>Diabetes Prediction</title>
 </head>
 
@@ -40,7 +40,7 @@
         <div class="background1"></div>
         <div class="header">
             <a href="homepage2" class="logo">
-                <img src="../static/public/logo.svg" alt="">
+                <img src="../../../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
@@ -48,7 +48,7 @@
             </div>
             <div class="Doctor_Name">
                 <input type="text"  placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
-                <img src="../static/public/user.svg" alt="User" maxlength="30">
+                <img src="../../../static/public/user.svg" alt="User" maxlength="30">
             </div>
         </div>
 
@@ -58,7 +58,7 @@
             <div class="LeftPart">
                 <div class="Heart_Disease">Diabetes Prediction</div>
                     <div class="HDisease_Prediction">
-                        <img src="../static/public/DiabetesFrame.svg" alt="">
+                        <img src="../../../static/public/DiabetesFrame.svg" alt="">
                     </div>
             </div>
 
@@ -177,7 +177,7 @@
         </div>
     </form>
 
-    <script src="../static/js/form_diab.js"></script>
+    <script src="../../../static/js/form_diab.js"></script>
 </body>
 
 </html>
