--- a/HMS/templates/disease/heart/form_heart.html
+++ b/HMS/templates/disease/heart/form_heart.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/form_and_prediction.css">
+    <link rel="icon" href="../../../static/public/favicon.ico">
+    <link rel="stylesheet" href="../../../static/css/form_and_prediction.css">
     <title>Heart Disease Prediction</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
         </div>
         <div class="header">
             <a href="homepage2" class="logo">
-                <img src="../static/public/logo.svg" alt="">
+                <img src="../../../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
@@ -41,7 +41,7 @@
             </div>
             <div class="Doctor_Name">
                 <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
-                <img src="../static/public/user.svg" alt="User">
+                <img src="../../../static/public/user.svg" alt="User">
             </div>
         </div>
 
@@ -51,7 +51,7 @@
             <div class="LeftPart">
                 <div class="Heart_Disease">Heart Disease</div>
                     <div class="HDisease_Prediction">
-                        <img src="../static/public/HeartDiseaseForm.svg" alt="">
+                        <img src="../../../static/public/HeartDiseaseForm.svg" alt="">
                     </div>
             </div>
 
@@ -146,7 +146,7 @@
         </div>
     </form>
 
-    <script src="../static/js/form_heart.js"></script>
+    <script src="../../../static/js/form_heart.js"></script>
 
     
 </body>
