--- a/HMS/templates/users/doctor/dsignup.html
+++ b/HMS/templates/users/doctor/dsignup.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/psignup.css">
+    <link rel="stylesheet" href="../../../static/css/psignup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico">
+    <link rel="icon" href="../../../static/public/favicon.ico">
     <title>Doctor signup</title>
 </head>
 <body>
     
     <div class="navbar">
         <a href="./homepage" class="logo">
-            <img src="../static/public/logo.svg" alt="">
+            <img src="../../../static/public/logo.svg" alt="">
             <div class="logoname">
                 MED.AI
             </div>
@@ -118,7 +118,7 @@
             </div>
 
             <div class="image">
-                <img src="../static/public/Frame.svg" alt="">
+                <img src="../../../static/public/Frame.svg" alt="">
             </div>
         </div>
 
@@ -129,6 +129,6 @@
     <div class="background">
 
     </div>
-    <script src="../static/js/dsignup.js"></script>
+    <script src="../../../static/js/dsignup.js"></script>
 </body>
 </html>
