--- a/HMS/templates/disease/heart/heartinfo.html
+++ b/HMS/templates/disease/heart/heartinfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/heart/style.css"/>    
+    <link rel="stylesheet" href="../../../static/css/heart/style.css"/>    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">    
@@ -304,7 +304,7 @@
 
       <img
         class="network-robot-assistant-working-on-laptop-1"
-        src="../static/css/heart/network-robot-assistant-working-on-laptop.gif"
+        src="../../../static/css/heart/network-robot-assistant-working-on-laptop.gif"
       />
       <div
         class="cardiovascular-disease-cvd-refers-to-a-class-of-disorders-that-affect-the-heart-and-blood-vessels-leading-to-various-conditions-such-as-heart-attacks-strokes-heart-failure-and-other-related-complications-it-is-one-of-the-leading-causes-of-mortality-and-morbidity-worldwide-posing-a-significant-public-health-challenge-cardiovascular-diseases-can-develop-due-to-a-variety-of-factors-including-high-blood-pressure-high-cholesterol-levels-smoking-obesity-and-diabetes-understanding-the-risk-factors-symptoms-and-available-prevention-strategies-is-crucial-in-combating-this-widespread-and-potentially-life-threatening-condition"
@@ -319,7 +319,7 @@
         risk factors, symptoms, and available prevention strategies is crucial
         in combating this widespread and potentially life-threatening condition.
       </div>
-      <img class="_11664301-20944833-1" src="../static/css/heart/_11664301-20944833-1.png" />
+      <img class="_11664301-20944833-1" src="../../../static/css/heart/_11664301-20944833-1.png" />
       <div
         class="we-introduce-our-state-of-the-art-ai-algorithm-for-cardiovascular-disease-risk-detection-powered-by-the-sophisticated-xg-boost-classifier-this-cutting-edge-machine-learning-model-lies-at-the-heart-of-our-system-enabling-us-to-analyze-vast-and-intricate-datasets-with-unparalleled-accuracy-xg-boost-excels-in-discerning-subtle-patterns-within-the-data-allowing-us-to-identify-crucial-risk-factors-associated-with-cardiovascular-disease"
       >
@@ -343,9 +343,9 @@
         professionals and individuals seeking accurate cardiovascular health
         assessments.
       </div>
-      <img class="untitled" src="../static/css/heart/untitled.png" /><img
+      <img class="untitled" src="../../../static/css/heart/untitled.png" /><img
         class="untitled-1"
-        src="../static/css/heart/untitled-1.png"
+        src="../../../static/css/heart/untitled-1.png"
       />
       <div class="confusion-matrix">Confusion matrix</div>
       <div class="classification-report">Classification report</div>
@@ -355,8 +355,8 @@
       </div>
       <img
         class="https-lottiefiles-com-animations-ai-powered-marketing-tools-abstract-jwxvm-kb-rxh"
-        src="../static/css/heart/https-lottiefiles-com-animations-ai-powered-marketing-tools-abstract-jwxvm-kb-rxh.png"
-      /><img class="_10606210-9817-1" src="../static/css/heart/_10606210-9817-1.png" />
+        src="../../../static/css/heart/https-lottiefiles-com-animations-ai-powered-marketing-tools-abstract-jwxvm-kb-rxh.png"
+      /><img class="_10606210-9817-1" src="../../../static/css/heart/_10606210-9817-1.png" />
       <div
         class="harnessing-the-power-of-artificial-intelligence-our-advanced-system-has-been-meticulously-crafted-to-revolutionize-early-detection-and-intervention-thereby-significantly-improving-cardiovascular-health-outcomes"
       >
