--- a/HMS/templates/users/doctor/doctorhome.html
+++ b/HMS/templates/users/doctor/doctorhome.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/doctorhome.css">
+    <link rel="icon" href="../../../static/public/favicon.ico">
+    <link rel="stylesheet" href="../../../static/css/doctorhome.css">
     <title>Doctor home</title>
 </head>
 <body>
     <div class="header">
         <a href="doctorhome" class="logo">
-            <img src="../static/public/logo.svg" alt="">
+            <img src="../../../static/public/logo.svg" alt="">
             <div class="logoname">MED.AI</div>
         </a>
         <a id="logout" href="logout"><button  type="button">Log Out</button></a>
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
-            <img src="../static/public/user.svg" alt="User">
+            <img src="../../../static/public/user.svg" alt="User">
         </div>
 
     </div>
@@ -33,7 +33,7 @@
                 Doctor's Dashboard
             </div>
             <div class="HDisease_Prediction">
-                <img src="../static/public/My_Dashboard_Frame.svg" alt="">
+                <img src="../../../static/public/My_Dashboard_Frame.svg" alt="">
             </div>
             <a href="doctorreport" >
                 <button id="my_patients" type="button">My Reports</button>
