--- a/HMS/templates/users/doctor/doctorreport.html
+++ b/HMS/templates/users/doctor/doctorreport.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico">
-    <link rel="stylesheet" href="../static/css/patienthome.css">
+    <link rel="icon" href="../../../static/public/favicon.ico">
+    <link rel="stylesheet" href="../../../static/css/patienthome.css">
     <title>Patient Home</title>
 </head>
 <body>
     <div class="header">
         <a href="./homepage" class="logo">
-            <img src="../static/public/logo.svg" alt="">
+            <img src="../../../static/public/logo.svg" alt="">
             <div class="logoname">MED.AI</div>
         </a>
         <a id="logout" href="logout"><button  type="button">Log Out</button></a>
 
         <div class="Doctor_Name">
             <input type="text" class="doctorNameInput" placeholder="Name Of Patient" maxlength="30" readonly>
-            <img src="../static/public/user.svg" alt="User">
+            <img src="../../../static/public/user.svg" alt="User">
         </div>
     </div>
 
@@ -31,7 +31,7 @@
         <div class="LeftPart">
             <div class="Heart_Disease">My Dashboard</div>
                     <div class="HDisease_Prediction"><img
-                            src="../static/public/My_Dashboard_Frame.svg" alt=""></div>
+                            src="../../../static/public/My_Dashboard_Frame.svg" alt=""></div>
         </div>
 
 
@@ -57,7 +57,7 @@
     </div>
 </form>
 
-<script src="../static/js/patienthome.js"></script>
+<script src="../../../static/js/patienthome.js"></script>
 
 </body>
 </html>
