patient report deleted

--- a/HMS/templates/users/doctor/doctorhome.html
+++ b/HMS/templates/users/doctor/doctorhome.html
@@ -35,7 +35,7 @@
             <div class="HDisease_Prediction">
                 <img src="../../../static/public/My_Dashboard_Frame.svg" alt="">
             </div>
-            <a href="doctorreport" >
+            <a href="doctorreport" style="text-decoration: none;">
                 <button id="my_patients" type="button">My Reports</button>
             </a>
         </div>
