--- a/HMS/templates/disease/diabetes/form_diab.html
+++ b/HMS/templates/disease/diabetes/form_diab.html
@@ -32,9 +32,9 @@
         Age =<input type="number" name="Age" required>
         <input type="submit"> 
     </form> -->
-    <!-- {% for message in messages %}
+    {% for message in messages %}
         <h5>{{ message }}</h5>
-    {% endfor %} -->
+    {% endfor %}
     <form onsubmit="return validateForm()" action="result" name="form1"  >
 
         <div class="background1"></div>
