--- a/HMS/templates/users/patient/patienthome.html
+++ b/HMS/templates/users/patient/patienthome.html
@@ -20,7 +20,7 @@
         <a id="logout" href="logout"><button  type="button">Log Out</button></a>
 
         <div class="Doctor_Name">
-            <input type="text" class="doctorNameInput" placeholder="Name Of Patient" maxlength="30" readonly>
+            <input type="text" class="doctorNameInput" placeholder="{{patientprofile.first_name}} {{patientprofile.last_name}}" maxlength="30" readonly>
             <img src="../../../static/public/user.svg" alt="User">
         </div>
     </div>
