--- a/HMS/templates/users/patient/patienthome.html
+++ b/HMS/templates/users/patient/patienthome.html
@@ -8,7 +8,7 @@
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO"rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="../../../static/public/favicon.ico">
-    <link rel="stylesheet" href="../../../static/css/patienthome.css">
+    <link rel="stylesheet" href="../../../static/css/reports.css">
     <title>Patient Home</title>
 </head>
 <body>
