--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -19,7 +19,7 @@
         </a>
         <div class="nav">
             <a href="./homepage#contact" class="contact">Contact us</a>
-            <a href="./homepage#line1" class="about">About us</a>
+            <a href="./hoxmepage#line1" class="about">About us</a>
             <a href="./login" class="logsign">Login</a>
         </div>
     </div>
