--- a/HMS/templates/users/doctor/dsignup.html
+++ b/HMS/templates/users/doctor/dsignup.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="welcome">
-        <p>Welcome to <span class="medAI">MED.AI</span></p>
+        <p>Welcome to <span class="medAI" style="font-family: MADEEvolveSansEVO;">MED.AI</span></p>
     </div>
 
     <div class="instruction">
