--- a/HMS/static/css/login.css
+++ b/HMS/static/css/login.css
@@ -39,7 +39,12 @@
     color: #170808;
     white-space: nowrap; 
     padding: 10px 15px; 
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+.nav a:hover{
+    color:#0067FF;
+    font-size: 18px;
+  }
 .login{
     display: flex;
     position: relative;
