--- a/HMS/static/css/psignup.css
+++ b/HMS/static/css/psignup.css
@@ -31,7 +31,12 @@ body{
     color: #170808;
     white-space: nowrap; 
     padding: 10px 15px; 
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+.nav a:hover{
+    color:#0067FF;
+    font-size: 18px;
+  }
 .welcome{
     position: relative;
     z-index: 1;
