--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -34,7 +34,7 @@
         <div class="est">Est 2023</div>
     </div>
     <div class="rectangle6">
-        <div class="box"><div class="text">Every heartbeat matters to us</div></div>
+        <div class="box"><div class="text">Every heartbeat matters...</div></div>
         <div class="background"></div>
         <img alt="" src="../static/public/heart.svg">
     </div>
