--- a/HMS/templates/users/patient/psignup.html
+++ b/HMS/templates/users/patient/psignup.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="error">
-    <form onsubmit="return validateForm()" action="" method="POST" name="form1">
+    <form onsubmit="return validateForm()" action="" enctype="multipart/form-data" method="POST" name="form1">
         {% for message in messages %}
         <h5>{{ message }}</h5>
         {% endfor %}
