--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -58,6 +58,6 @@
                 </div>
                 <div class="background2"></div>
     </div>
-    <!-- <script src="../static/js/login.js"></script> -->
+    <script src="../static/js/login.js"></script>
 </body>
 </html>
