Password Constrains added in Psignup and Dsignup

--- a/HMS/templates/users/patient/psignup.html
+++ b/HMS/templates/users/patient/psignup.html
@@ -131,7 +131,7 @@
                         <option value="ON">O-</option>
                     </select>
                     
-                    <input type="date" id="textbox" name="birthdate">
+                    <input type="date" id="textbox" name="birthdate" required>
 
                     <button type="submit" class="signup">Create account</button>
                 </div>
