changed height of right part in heart disease

--- a/HMS/templates/disease/heart/form_heart.html
+++ b/HMS/templates/disease/heart/form_heart.html
@@ -66,7 +66,7 @@
                 {% endfor %}
 
 
-            <div class="RightPart">
+            <div class="RightPart" style="height:60vw">
                 <div class="Param">
                     <div class="BlueDot"></div>
                     <div class="Parameters">Parameters</div>
