--- a/HMS/static/css/homepage.css
+++ b/HMS/static/css/homepage.css
@@ -160,7 +160,7 @@ body{
   margin: auto;
   margin-top: 6.4vw;
   width: 72.2vw;
-  height: 50vw;
+  /* height: 50vw; */
 }
 .ourmodels .head{
   justify-content: center;
@@ -212,7 +212,7 @@ body{
 
 .aboutus{
   width: 86.5vw;
-  height: 43vw;
+  /* height: 43vw; */
   display: flex;
   margin: auto;
   margin-top: 5vw;
@@ -273,24 +273,18 @@ body{
     margin-top: 4.1vw;
     margin-left: 6.5vw;
   }
-  .contactandlogo .head{
-    margin-left: 2.5vw;
-    font-family: Montserrat Alternates;
-    font-size: 3vw;
-    font-style: normal;
-    font-weight: 500;
-  }
+  
   .queries{
     position: relative;
     color: #FFF;
-    width: 86.8vw;
-    height: 20vw;
+    width: 90vw;
+    height: 30vw;
     margin: auto;
-    margin-top: 3.7vw;
+    margin-top: 2.5vw;
     display: flex;
     border-radius: 45px;
     background: #0067FF;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
   }
   .enteremail{
@@ -300,74 +294,121 @@ body{
     justify-content: center;
     align-items: center;
   }
-  .enteremail .head{
-    font-size: 1.3vw;
+  .head{
+    margin-left: 2.5vw;
+    font-family: Montserrat Alternates;
+    font-size: 3vw;
+    font-style: normal;
+    font-weight: 500;
   }
-  .enteremail form{
-    display: flex;
-    flex-direction: column;
-  }
-  .form input{
-    background:#D9D9D9;
-    border-width: 0px;
-    height: 3.5vw;
-    border-radius: 3vw;
-    font-size: 1.6vw;
+
+  .queryemail {
+    top: 2vw;
     text-align: center;
-  }
-  form input::placeholder{
-    color:#000;
-  }
-  .form input[type=email]{
-    background:#D9D9D9;
-    margin-top: 22px;
-    width: 20.7vw;
-    margin-bottom: 22px;
-  }
-  input:focus::placeholder{
-    color: transparent;
-  }
-  .form input[type=submit]{
-    color: #000;
-    width: 20.7vw;
-  }
-  .typequery textarea{
-    font-size: 1.4vw;
-    width: 32vw;
-    height: 10vw;
-    border-radius: 10px;
-    background: #D9D9D9;
-    border: none;
-    resize: none;
-  }
-  .typequery textarea::-webkit-input-placeholder{
-    font-size: 1.6vw;
-    position:absolute;
-    top: 0.6vw;
-    left: 0.6vw;
-  }
-  .typequery textarea:focus::placeholder{
-    color: transparent;
-  }
-  .emailandnumber{
-    margin-right: 20px;
     display: flex;
     flex-direction: column;
-    font-size: 1.6vw;
-    gap: 1.5vw;
-  }
-  .emailandnumber .phone{
-    display: flex;
-    align-items: center;
-  }
-  .emailandnumber .email{
-    display: flex;
-    align-items: center;
-  }
-  .emailandnumber svg{
-    width: 1.9vw;
+    font-size: 1.25vw;
+    gap: 0.5vw;
   }
   
+  .queryemail svg{
+    width: 1.5vw;
+  }
+
+  .email a{
+    text-decoration: none; 
+    display: flex;
+    color: white;
+    border: solid;
+    border-radius: 25px;
+    border-color: #0067FF;
+    padding: 3px;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 1vw;
+  }
+
+  .text{
+    padding-top: 0.3vw;
+  }
+
+  .email a:hover{
+    color: #0067FF;
+    border-color: black;
+    background-color: white;
+
+  }
+
+  .elementmap {
+    width: 22vw;
+    height: 16vw;
+    border-radius: 2vw;
+    cursor: url("https://maps.gstatic.com/mapfiles/openhand_8_8.cur"), default;
+    touch-action: pan-x pan-y;
+    }
+
+    .querieleft
+    {
+      margin-left: 2vw;  
+    }
+    .maps{
+      text-align: center;
+      justify-content: center;
+    }
+
+
+    .maps>.location{
+      font-family: Montserrat Alternates;
+      font-size: 2vw;
+      font-family: 500;
+      font-style: normal;
+      
+    }
+
+    .queryright{
+      margin-left: 2vw; 
+      flex-direction: row;
+      width: 100%;
+    }
+    
+    .ourteam{
+      color: #FFF;
+      font-family: Montserrat Alternates;
+      font-size: 2.5vw;
+      font-style: normal;
+      font-weight: 200;
+      line-height: 100%;
+      margin-top: 1vw;
+      margin-bottom: 1vw;
+      /* text-align: center; */
+    }
+
+    
+    
+    .imagecontainer{
+      display: flex;
+      justify-content: space-between;
+    }
+    
+    .imagecontainer img{
+        margin: 0 1vw 0.5vw 1vw;
+        width: 10vw;
+        height: 12vw;
+        flex-shrink: 0;
+        border-radius: 1vw;
+    }
+
+    .imagecontainer img:hover{
+      
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      transform: scale(1.1);
+      transition: 1s ease;
+      
+    }
+    
+    
+    
 
   /* footer */
 
@@ -375,7 +416,7 @@ body{
   position: relative;
   display: flex;
   width: 100vw;
-  height: 5vw;
+  height: 3.5vw;
   background: #0067FF;
   margin-top: 3.8vw;
   align-items: center;
@@ -392,9 +433,7 @@ body{
   margin-bottom: 10px;
   margin-right: 2px;
 }
-.atr-icon svg{
-  width: 1.3vw;
-}
+
 .icons{
   position: absolute;
   right: 4vw;
@@ -405,22 +444,21 @@ body{
   align-items: center;
 }
 .icons svg{
-  width: 4.2vw;
+  width: 3vw;
 }
-
 @media screen and (max-width:1024px){
-  .emailandnumber{
+  .queryemail{
     gap: 1vw;
   }
 }
 @media screen and (max-width:768px){
-  .emailandnumber{
+  .queryemail{
     gap: 0px;
   }
   .enteremail{
     justify-content:center;
   }
-  .enteremail .head{
+  .queryemail .head{
     margin-top: 1vw;
   }
   .form input[type=email]{
@@ -432,7 +470,7 @@ body{
   .phone,.email{
     height: 3vw;
   }
-  .emailandnumber{
+  .queryemail{
     margin-left: 5px;
   }
 }
